# p528

./: .clang-format  .gitignore  CMakeLists.txt  README.md
ConsoleApp/: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt  main.ApprovalTests.Test1200MHz_0_01.approved.txt  main.ApprovalTests.Test1200MHz_0_01FullRes.approved.txt  main.ApprovalTests.Test1200MHz_0_05.approved.txt  main.ApprovalTests.Test1200MHz_0_05FullRes.approved.txt  main.ApprovalTests.Test1200MHz_0_10.approved.txt  main.ApprovalTests.Test1200MHz_0_10FullRes.approved.txt  main.ApprovalTests.Test1200MHz_0_50.approved.txt  main.ApprovalTests.Test1200MHz_0_50FullRes.approved.txt  main.ApprovalTests.Test1200MHz_0_95.approved.txt  main.ApprovalTests.Test1200MHz_0_95.received.txt  main.ApprovalTests.Test1200MHz_0_95FullRes.approved.txt  main.ApprovalTests.Test125MHz_0_01.approved.txt  main.ApprovalTests.Test125MHz_0_01FullRes.approved.txt  main.ApprovalTests.Test125MHz_0_05.approved.txt  main.ApprovalTests.Test125MHz_0_05FullRes.approved.txt  main.ApprovalTests.Test125MHz_0_10.approved.txt  main.ApprovalTests.Test125MHz_0_10FullRes.approved.txt  main.ApprovalTests.Test125MHz_0_50.approved.txt  main.ApprovalTests.Test125MHz_0_50FullRes.approved.txt  main.ApprovalTests.Test125MHz_0_95.approved.txt  main.ApprovalTests.Test125MHz_0_95FullRes.approved.txt  main.ApprovalTests.Test15500MHz_0_01.approved.txt  main.ApprovalTests.Test15500MHz_0_01FullRes.approved.txt  main.ApprovalTests.Test15500MHz_0_05.approved.txt  main.ApprovalTests.Test15500MHz_0_05.received.txt  main.ApprovalTests.Test15500MHz_0_05FullRes.approved.txt  main.ApprovalTests.Test15500MHz_0_10.approved.txt  main.ApprovalTests.Test15500MHz_0_10FullRes.approved.txt  main.ApprovalTests.Test15500MHz_0_50.approved.txt  main.ApprovalTests.Test15500MHz_0_50FullRes.approved.txt  main.ApprovalTests.Test15500MHz_0_95.approved.txt  main.ApprovalTests.Test15500MHz_0_95.received.txt  main.ApprovalTests.Test15500MHz_0_95FullRes.approved.txt  main.ApprovalTests.Test2400MHz_0_01.approved.txt  main.ApprovalTests.Test2400MHz_0_01FullRes.approved.txt  main.ApprovalTests.Test2400MHz_0_05.approved.txt  main.ApprovalTests.Test2400MHz_0_05FullRes.approved.txt  main.ApprovalTests.Test2400MHz_0_10.approved.txt  main.ApprovalTests.Test2400MHz_0_10FullRes.approved.txt  (+51 more)
include/: LOSTable.h  constants.h  p528.h  p528Impl.h  p676.h  p835.h
src/: AbsorptionParameters.cpp  CalculateEffectiveRayLength.cpp  GetPathLoss.cpp  (+20 more)
(+23 files in other folders)
